--- a/countdownTimer/style.css
+++ b/countdownTimer/style.css
@@ -1,44 +1,44 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
 
-*{
-    box-sizing:border-box
+* {
+    box-sizing: border-box;
 }
 
-body{
-    background-image: url('https://images.unsplash.com/photo-1621747609281-38853764c986?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80');
-    background-size: contain;
+body {
+    background-image: url("./snow.jpg");
+    background-size: cover;
     background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
     display: flex;
     flex-direction: column;
     align-items: center;
     min-height: 100vh;
-    font-family: 'popping' , sans-serif;
-    margin:0%
+    font-family: "Poppins", sans-serif;
+    margin: 0;
 }
 
-h1{
+h1 {
     font-weight: normal;
     font-size: 4rem;
     margin-top: 5rem;
 }
 
-.countdown-container{
+.countdown-container {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.big-text{
+.big-text {
     font-weight: bold;
-    font-size: 3.4rem;
+    font-size: 6rem;
     line-height: 1;
-    margin: 0.2rem;
+    margin: 1rem 2rem;
 }
 
-.countdown-el{
+.countdown-el {
     text-align: center;
 }
 
 .countdown-el span {
-    font-size: 1.8rem;
+    font-size: 1.3rem;
 }
